# FunctionalProgrammingCourse

./: .gitignore  README.md
haskell-db-lab/: .gitignore  README.md  haskell-db-lab.cabal  stack.yaml
haskell-db-lab/src/: Competition.hs  ConsoleInterface.hs  Main.hs  Schedule.hs  Section.hs  Student.hs  Teacher.hs  mock_db_script.sql
haskell-parallel/: README.md
haskell-parallel/src/: MapCompat.hs  SparseGraph.hs  fwsparse.hs  fwsparse_threaded.hs
lisp-oop-ui/src/: README.md  main.lisp
lisp-text-analayzer/: README.md  main.lisp  text.txt
