name:                haskell-db-lab
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rickskyy/FunctionalProgrammingCourse/haskell-db-lab/
license:             MIT
license-file:        LICENSE
author:              Yaroslav Shalivskyy
maintainer:          yaroslav@shalivsky.com
copyright:           2017 Yaroslav Shalivskyy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-db-lab
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, 
                       HDBC,
                       HDBC-postgresql,
                       containers,
                       bytestring,
                       time
  other-modules:       Schedule,
                       Teacher,
                       Student,
                       Section
